Adding scalability and fault tolerance workloads